@@ -27,7 +27,7 @@ network:
 gameplay:
 {
 	# New players start here:
-	startloc = "church:rm_t_barrow";
+	startloc = "blizzard:rm_snow_temple";
 
 }
 
