@@ -1,3 +1,7 @@
+07/04/2020
+- Added the IContainer class for python iteration of objects contained in a physical
+- Made iterators work in python
+
 07/03/2020
 - Integrated full Script functionality into the ActionMgr execution queue
 - Added hasAttribute, addAttribute functionality to specials scripting
